[DEV] Add messages codes
